Bug 303747 - Modified shortcut for "Add Bookmark" does not get reloaded on restart
Summary: Modified shortcut for "Add Bookmark" does not get reloaded on restart
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: keyboard (other bugs)
Version First Reported In: 2.8.4
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-18 16:10 UTC by Jonathan
Modified: 2012-07-21 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan 2012-07-18 16:10:55 UTC
The shortcut for "Add Bookmark" does not get reloaded when restarting Konsole

Reproducible: Always

Steps to Reproduce:
1. Change the shortcut for "Add Bookmark"
2. Close Konsole
3. Reopen Konsole
4. Attempt to use shortcut
Actual Results:  
Nothing (shortcut in configure shortcuts will still show the default shortcut)

Expected Results:  
Bookmark should be added

Switching shortcut schemes and then switching back to default will cause configure shortcuts to show the shortcut that was manually set.
Comment 1 Kurt Hindenburg 2012-07-20 13:21:04 UTC
Git commit 32af61fba86d7911e7c907998d0bbf4d8c92e710 by Kurt Hindenburg.
Committed on 20/07/2012 at 15:19.
Pushed by hindenburg into branch 'master'.

Leave the bookmark shortcut set to what user changed it to

Only reset the bookmark shortcut to Ctrl+Shift+B if the user didn't
change it to something else.
FIXED-IN: 4.10

M  +6    -2    src/MainWindow.cpp

http://commits.kde.org/konsole/32af61fba86d7911e7c907998d0bbf4d8c92e710
Comment 2 Kurt Hindenburg 2012-07-21 12:40:34 UTC
Git commit a02f0dccb949c5d9747f66f477a3586f6df490f1 by Kurt Hindenburg.
Committed on 21/07/2012 at 14:39.
Pushed by hindenburg into branch 'KDE/4.8'.

Leave the bookmark shortcut set to what user changed it to

Only reset the bookmark shortcut to Ctrl+Shift+B if the user didn't
change it to something else.
FIXED-IN: 4.10

cherry-picked 32af61fba86d7911e7c907998d0bbf4d8c92e710

M  +6    -2    src/MainWindow.cpp

http://commits.kde.org/konsole/a02f0dccb949c5d9747f66f477a3586f6df490f1
Comment 3 Kurt Hindenburg 2012-07-21 12:46:33 UTC
Git commit d934189c0404d2079eb697cd637747ac8b8982c9 by Kurt Hindenburg.
Committed on 20/07/2012 at 15:19.
Pushed by hindenburg into branch 'KDE/4.9'.

Leave the bookmark shortcut set to what user changed it to

Only reset the bookmark shortcut to Ctrl+Shift+B if the user didn't
change it to something else.
FIXED-IN: 4.10
(cherry picked from commit 32af61fba86d7911e7c907998d0bbf4d8c92e710)

M  +6    -2    src/MainWindow.cpp

http://commits.kde.org/konsole/d934189c0404d2079eb697cd637747ac8b8982c9