Leave the bookmark shortcut set to what user changed it to

Only reset the bookmark shortcut to Ctrl+Shift+B if the user didn't
change it to something else.

BUG: 303747
FIXED-IN: 4.10
(cherry picked from commit 32af61fba86d7911e7c907998d0bbf4d8c92e710)